TODO 리스트 프로그램

--- a/project_todo_list/.project
+++ b/project_todo_list/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>chicken_delivery_project</name>
+	<name>project_todo_list</name>
 	<comment></comment>
 	<projects>
 	</projects>
