--- a/project_minigame/.project
+++ b/project_minigame/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>project_chicken_delivery</name>
+	<name>project_minigame</name>
 	<comment></comment>
 	<projects>
 	</projects>
