--- a/db_project/.project
+++ b/db_project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>db_project</name>
+	<name>db_project1</name>
 	<comment></comment>
 	<projects>
 	</projects>
